@@ -2676,5 +2676,22 @@ or download tarballs for
     </content>
   </item>
 
+  <item>
+    <date>2006-12-04 19:00</date>
+    <title>GStreamer Python Bindings 0.10.6 stable release</title>
+    <content>
+<p>
+The GStreamer team is proud to announce a new Python Bindings
+release in the GStreamer 0.10 stable release series.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gst-python/0.10.6.html">gst-python</a>,
+or download tarballs for
+<a href="&site;/src/gst-python/gst-python-0.10.6.tar.bz2">gst-python</a>.
+</p>
+    </content>
+  </item>
+
 
 </news>
