@@ -1,0 +1,109 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-python</module>
+  <module-fancy>GStreamer Python bindings</module-fancy>
+  <name>You're not very subtle, but you are effective</name>
+  <version>0.10.6</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Python Bindings.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+  </intro>
+  <features>
+    <feature>Now only depends on pygobject</feature>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+  </features>
+
+  <applications>
+  </applications>
+
+    <contributors>
+	<person>Andy Wingo</person>
+	<person>Edward Hervey</person>
+	<person>Jan Schmidt</person>
+	<person>Jason Gerard DeRose</person>
+	<person>Michael Smith</person>
+	<person>Rene Stadler</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+  </contributors>
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <deprecations>
+    </deprecations>
+  </api>
+-->
+
+  
+
+  <bugs>
+    <bug>
+      <id>355150</id>
+      <summary>Expose GST_PARAM_CONTROLLABLE in the bindings</summary>
+    </bug>
+    <bug>
+      <id>343980</id>
+      <summary>import gst crash python</summary>
+    </bug>
+    <bug>
+      <id>346190</id>
+      <summary>allow build/install without pygtk (ie pygobject)</summary>
+    </bug>
+    <bug>
+      <id>349623</id>
+      <summary>Build failure due to &quot; discards qualifiers from pointer ta...</summary>
+    </bug>
+    <bug>
+      <id>359375</id>
+      <summary>variable 'interface' results in syntax error with MingW</summary>
+    </bug>
+    <bug>
+      <id>362011</id>
+      <summary>[patch] Indentation typo in examples/bps.py</summary>
+    </bug>
+    <bug>
+      <id>362183</id>
+      <summary>Please remove examples/gst123</summary>
+    </bug>
+    <bug>
+      <id>362202</id>
+      <summary>[patch] A replacement of examples/vorbisplay.py for 0.10</summary>
+    </bug>
+    <bug>
+      <id>362272</id>
+      <summary>[patch] Ports examples/audioconcat.py to 0.10</summary>
+    </bug>
+    <bug>
+      <id>362290</id>
+      <summary>[patch] Ports examples/cp.py to 0.10</summary>
+    </bug>
+    <bug>
+      <id>371969</id>
+      <summary>[Discoverer] Issues with demuxers that don't create pads ...</summary>
+    </bug>
+    <bug>
+      <id>348416</id>
+      <summary>remuxer example should use normal seek</summary>
+    </bug>
+    <bug>
+      <id>349107</id>
+      <summary>gst.BaseSrc can't negotiate with ffmpegcolorspace</summary>
+    </bug>
+  </bugs>
+</release>
